fixed logo on dark mode

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Author URI: https://simplenet.io/
 Description: A clean, blank base to serve as a starting point to build websites.
 Tested up to: 6.7.1
 Requires PHP: 7.0
-Version: 0.9.2
+Version: 0.9.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: simplenet
@@ -94,6 +94,6 @@ strong {
 /* Logo on Dark Mode
 --------------------------------------------- */
 
-body.is-dark-theme .wp-block-site-logo img {
-  filter: invert(0.3);
-}
+.theme-dark .wp-block-site-logo img {
+    filter: invert(0.4);
+  }
